# list_methods

./: README.md  pyproject.toml  setup.cfg
src/: mapfilter.py
src/list_methods/: __init__.py  main.py
