[metadata]
name = list_methods-theodorc
version = 0.0.7
author = Theodor René Carlsen
author_email = theodor.rene@gmail.com
description = Add .map, .filter and .reduce as list methods
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/theodorrene/list_methods
project_urls =
    Bug Tracker = https://github.com/theodorrene/list_methods/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
